IF(NOT BUILD_LUABRIDGE AND NOT BUILD_LUAENGINE)
	return()
ENDIF()

PROJECT(lualib C)

file(GLOB_RECURSE sources ${SCRIPTS_PATH}/${PROJECT_NAME}/*.c)
file(GLOB_RECURSE headers ${SCRIPTS_PATH}/${PROJECT_NAME}/*.h ${SCRIPTS_PATH}/${PROJECT_NAME}/*.hpp)

IF( NOT DEFINED CMAKE_BUILD_TYPE OR CMAKE_BUILD_TYPE MATCHES "[Dd][Ee][Bb][Uu][Gg]" )
	ADD_DEFINITIONS( -DLUA_USE_APICHECK )
ENDIF()

ADD_LIBRARY( ${PROJECT_NAME} STATIC ${sources} ${headers} )
REMOVE_DEFINITIONS( -std=c++0x )
IF( IS_64BIT )
	SET_PROPERTY( TARGET ${PROJECT_NAME} APPEND PROPERTY COMPILE_FLAGS "-fPIC")
ENDIF()

set(LUA_LIBRARIES ${PROJECT_NAME} CACHE INTERNAL "Lua libraries")
set(LUA_INCLUDE_DIR ${SCRIPTS_PATH}/${PROJECT_NAME} CACHE INTERNAL "Lua include directory")

unset(prefix)
